@startuml
'https://plantuml.com/sequence-diagram

class Item
{
    -String description
    -DatePicker date
    -BooleanProperty state

    +Item()
    +Item(String description,boolean state)
    +Item(String description,DatePicker date, boolean state)

    +String getDate()
    +String getDescription()
    +boolean isState()

}

class TodoListApplication extends Application
{
    +void start(Stage stage)
    +{static}void main(String[] args)

}


class ListController implements Initializable
{
    -TextField descriptionTextField
    -DatePicker dateTextField

    -TableView<Item> table
    -TableColumn<Item,Boolean> col1
    -TableColumn<Item,String> col2
    -TableColumn<Item,String> col1

    +void initialize(URL url, ResourceBundle rb)

    -void createItem(String description, LocalDate date, boolean state)
    +void addItem()
    +void deleteItem()
    +void clearList()

    +void showComplete()
    +void showIncomplete()
    +void showAll()

    +void saveList()
    +void loadList()

    +void helpButton()



}

TodoListApplication "Initializes FXML which \n uses ListController"*-- ListController

ListController "Create objects of"*-- Item



@enduml